--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="game-container">
     <div id="background"></div>
-    <div id="dino"></div>
+    <img id="dino" src="my-dino.gif" alt="Dino" />
     <div id="obstacle"></div>
     <div id="score">Score: 0</div>
     <div id="game-over" class="hidden">Game Over! Press Space to Restart</div>
